# Fetch-Robot-pickup-Automatically

./: README.md
Move_service/move_demo/scripts/: move_service.py
darknet_ros/: CMakeLists.txt  DownloadYOLOWeights
grasp/grasp_demo/: CMakeLists.txt  package.xml
grasp/grasp_demo/launch/: grasp_obj.launch  start_server.launch
grasp/grasp_demo/scripts/: Obj_grasp1.py  go_init.py  move_grasp.py  obj_grasp.py  tf_broadcast.py  tf_listener.py
grasp/grasp_demo/srv/: CamToReal.srv
grasp_demo/: package.xml
grasp_demo/include/grasp_demo/: tf_broadcast.h
grasp_demo/scripts/: cam_to_real.py  move_grasp1.py  obj123_grasp.py  obj_grasp.py  tf_broadcast.py
move_demo/: CMakeLists.txt  package.xml
move_demo/scripts/: 1.py  grasp_obj.py  move_grasp.py  place_obj.py
move_demo/srv/: NavigateToPoint.srv
